Fixed text overflow

--- a/styles/collectionInfo.module.css
+++ b/styles/collectionInfo.module.css
@@ -23,6 +23,9 @@
 }
 .display_text_highlight {
     font-weight: bolder;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 160px;
 }
 .display_title {
     overflow: hidden;
